@@ -1,3 +1,8 @@
+2007-02-13  Akim Demaille  <akim.demaille@free.fr>
+
+	ECHO_CMD
+	* compiler.hh (SLEEP, ECHO_CMD): New.
+
 2007-02-13  Akim Demaille  <demaille@gostai.com>
 
 	Mingw32 portability
